welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: Boolean does not take parameters
while (danse()){
            ^BDRBuggle:4: error: value update is not a member of String
  if (litMessage()="R"){
      ^BDRBuggle:7: error: value update is not a member of String
  else if (litMessage()="L"){
           ^BDRBuggle:10: error: value update is not a member of String
  else if (litMessage()="I"){
           ^BDRBuggle:13: error: value update is not a member of String
  else if (litMessage()="A")
           ^BDRBuggle:15: error: value update is not a member of String
  else if (litMessage()="B"){
           ^BDRBuggle:18: error: value update is not a member of String
  else if (litMessage()="C"){
           ^BDRBuggle:22: error: value update is not a member of String
  else if (litMessage()="Z")
           ^BDRBuggle:24: error: value update is not a member of String
  else if (litMessage()="Y"){
           ^BDRBuggle:27: error: value update is not a member of String
  else if (litMessage()="X"){
           ^